@@ -1,3 +1,8 @@
+2009-04-10
+	* rename button of journal Tab
+	* bugfixes of Attrs Tab.
+	* change the name of PushBack() to ShowSubset(): avoid the confusion of base:::pushBack().
+
 2009-04-08
 	* Add journal Tab (rename button is not implemented yet).
 	
